--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2793,14 +2793,60 @@
                 <li>If focus is on a any other cell, focus one cell to the left.</li>
               </ul>
             </li>
-            <li><kbd>Down Arrow</kbd>: Moves focus one cell down. If focus is on the bottom cell in the column, focus does not move.</li>
-            <li><kbd>Up Arrow</kbd>: Moves focus one cell Up. If focus is on the top cell in the column, focus does not move.</li>
-            <li><kbd>Page Down</kbd>: Moves focus down an author-determined number of rows, typically scrolling so the bottom row in the currently visible set of rows becomes one of the first visible rows. If focus is in the last row of the grid, focus does not move.</li>
-            <li><kbd>Page Up</kbd>: Moves focus up an author-determined number of rows, typically scrolling so the top row in the currently visible set of rows becomes one of the last visible rows. If focus is in the first row of the grid, focus does not move.</li>
-            <li><kbd>Home</kbd>: moves focus to the first cell in the row that contains focus.</li>
-            <li><kbd>End</kbd>: moves focus to the last cell in the row that contains focus.</li>
-            <li><kbd>Control + Home</kbd>: moves focus to the first cell in the first row.</li>
-            <li><kbd>Control + End</kbd>: moves focus to the last cell in the last row.</li>
+            <li>
+              <kbd>Down Arrow</kbd>:
+              <ul>
+                <li>If focus is on a row, moves focus one row down.  If focus is on the last row, focus does not move.</li>
+                <li>If focus is on a cell, moves focus one cell down.  If focus is on the bottom cell in the column, focus does not move.</li>
+              </ul>
+            <li>
+              <kbd>Up Arrow</kbd>:
+              <ul>
+                <li>If focus is on a row, moves focus one row up.  If focus is on the first row, focus does not move.</li>
+                <li>If focus is on a cell, moves focus one cell up.  If focus is on the top cell in the column, focus does not move.</li>
+              </ul>
+            <li>
+              <kbd>Page Down</kbd>:
+              <ul>
+                <li>If focus is on a row, moves focus down an author-determined number of rows, typically scrolling so the bottom row in the currently visible set of rows becomes one of the first visible rows. If focus is in the last row of the grid, focus does not move.</li>
+                <li>If focus is on a cell, moves focus down an author-determined number of cells, typically scrolling so the bottom row in the currently visible set of rows becomes one of the first visible rows. If focus is in the last row of the grid, focus does not move.</li>
+              </ul>
+            </li>
+            <li>
+              <kbd>Page Up</kbd>:
+               <ul>
+                  <li>If focus is on a row, moves focus up an author-determined number of rows, typically scrolling so the top row in the currently visible set of rows becomes one of the last visible rows. If focus is in the first row of the grid, focus does not move.</li>
+                  <li>If focus is on a cell, moves focus up an author-determined number of cells, typically scrolling so the top row in the currently visible set of rows becomes one of the last visible rows. If focus is in the first row of the grid, focus does not move.</li>
+                </ul>
+            </li>
+            <li>
+              <kbd>Home</kbd>:
+               <ul>
+                  <li>If focus is on a row, moves focus up to the first row.  If focus is in the first row of the grid, focus does not move.</li>
+                  <li>If focus is on a cell, moves focus to the first cell in the row. If focus is in the first cell of the row, focus does not move.</li>
+                </ul>
+            </li>
+            <li>
+              <kbd>End</kbd>:
+               <ul>
+                  <li>If focus is on a row, moves focus to the last row.  If focus is in the last row of the grid, focus does not move.</li>
+                  <li>If focus is on a cell, moves focus to the last cell in the row. If focus is in the last cell of the row, focus does not move.</li>
+                </ul>
+            </li>
+            <li>
+              <kbd>Control + Home</kbd>:
+               <ul>
+                  <li>If focus is on a row, moves focus up to the first row.  If focus is in the first row of the grid, focus does not move.</li>
+                  <li>If focus is on a cell, moves focus to the first cell in the column. If focus is in the first row of the grid, focus does not move.</li>
+                </ul>
+            </li>
+            <li>
+              <kbd>Control + End</kbd>:
+               <ul>
+                  <li>If focus is on a row, moves focus to the last row.  If focus is in the last row of the grid, focus does not move.</li>
+                  <li>If focus is on a cell, moves focus to the last cell in the column. If focus is in the last row of the grid, focus does not move.</li>
+                </ul>
+            </li>
           </ul>
           <ul class="note">
             <li>
@@ -2815,13 +2861,49 @@
           </ul>
           <p>If a grid supports selection of cells, rows, or columns, the following keys are commonly used for these functions.</p>
           <ul>
-            <li><kbd>Control + Space</kbd>: selects the column that contains the focus.</li>
-            <li><kbd>Shift + Space</kbd>: Selects the row that contains the focus. If the grid includes a column with checkboxes for selecting rows, this key can serve as a shortcut for checking the box when focus is not on the checkbox.</li>
+            <li>
+              <kbd>Control + Space</kbd>:
+              <ul>
+                <li>If focus on a row, selects all cells.</li>
+                <li>If focus is on a call, selects the column that contains the focus.</li>
+              </ul>
+            </li>
+            <li>
+              <kbd>Shift + Space</kbd>:
+              <ul>
+                <li>If focus on a row, no change in selection.</li>
+                <li>If focus on a cell, selects the row that contains the focus. If the grid includes a column with checkboxes for selecting rows, this key can serve as a shortcut for checking the box when focus is not on the checkbox.</li>
+              </ul>
+            </li>
             <li><kbd>Control + A</kbd>: Selects all cells.</li>
-            <li><kbd>Shift + Right Arrow</kbd>: Extends selection one cell to the right.</li>
-            <li><kbd>Shift + Left Arrow</kbd>: Extends selection one cell to the left.</li>
-            <li><kbd>Shift + Down Arrow</kbd>: Extends selection one cell down.</li>
-            <li><kbd>Shift + Up Arrow</kbd>: Extends selection one cell Up.</li>
+            <li>
+              <kbd>Shift + Right Arrow</kbd>:
+              <ul>
+                <li>If focus on a row, no change in selection.</li>
+                <li>if focus on a cell, extends selection one cell to the right.</li>
+              </ul>
+            </li>
+            <li>
+              <kbd>Shift + Left Arrow</kbd>:
+              <ul>
+                <li>If focus on a row, no change in selection.</li>
+                <li>if focus on a cell, extends selection one cell to the left.</li>
+              </ul>
+            </li>
+            <li>
+              <kbd>Shift + Down Arrow</kbd>:
+              <ul>
+                <li>If focus on a row, extends selection to all the cells in the next row.</li>
+                <li>If focus on a cell, extends selection one cell down.</li>
+              </ul>
+            </li>
+            <li>
+              <kbd>Shift + Up Arrow</kbd>:
+              <ul>
+                <li>If focus on a row, extends selection to all the cells in the previous row.</li>
+                <li>If focus on a cell, extends selection one cell up.</li>
+              </ul>
+            </li>
           </ul>
           <p class="note">See <a href="#kbd_common_conventions"></a> for cut, copy, and paste key assignments.</p>
         </section>
