initial draft of treegrid design pattern

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2735,7 +2735,7 @@
       </section>
     </section>
 
-    <section class="widget" id="Treegrid">
+    <section class="widget" id="treegrid">
       <h3>Treegrid</h3>
         <p>
           A <a href="#treegrid" class="role-reference">treegrid</a> widget presents a hierarchical data grid consisting of tabular information that is editable or interactive.
