fixed some bugs

--- a/examples/treegrid/treegrid-1.html
+++ b/examples/treegrid/treegrid-1.html
@@ -437,7 +437,7 @@ document.addEventListener('DOMContentLoaded', function () {
               <li>Applied only to rows or cells elements that are parent rows. i.e., next set of rows are response to the message in this row</li>
               <li>Indicates the parent row is closed, i.e., the descendant rows are not visible.</li>
               <li>The visual indication of the collapsed state is synchronized by a CSS attribute selector.</li>
-              <li>When the treegrid is configured to support focus on rows <code>aria-expanded</code> is on the <code>tr</code> elements, but when this treegrid is configured to not support focus on rows, <code>aria-expanded</code> is on the first <code>td</code> element contained in each row.</li>
+              <li>When the treegrid is configured to support focus on rows <code>aria-expanded</code> is on the <code>tr</code> elements, but when the treegrid is configured to support focus on cells only, <code>aria-expanded</code> is on the first <code>td</code> element contained in each row.</li>
             </ul>
           </td>
         </tr>
@@ -451,7 +451,7 @@ document.addEventListener('DOMContentLoaded', function () {
               <li>Applied only to rows or cells elements that are parent rows. i.e., next set of rows are response to the message in this row</li>
               <li>Indicates the parent row is open, i.e., the descendant rows are visible.</li>
               <li>The visual indication of the open state is synchronized by a CSS attribute selector.</li>
-              <li>When the treegrid is configured to support focus on rows <code>aria-expanded</code> is on the <code>tr</code> elements, but when this treegrid is configured to not support focus on rows, <code>aria-expanded</code> is on the first <code>td</code> element contained in each row.</li>
+              <li>When the treegrid is configured to support focus on rows <code>aria-expanded</code> is on the <code>tr</code> elements, but when the treegrid is configured to support focus on cells only, <code>aria-expanded</code> is on the first <code>td</code> element contained in each row.</li>
             </td>
         </tr>
         <tr>
