--- a/examples/treegrid/treegrid-1.html
+++ b/examples/treegrid/treegrid-1.html
@@ -134,32 +134,32 @@ document.addEventListener('DOMContentLoaded', function () {
              <td role="gridcell">I agree with you, they are the shizzle</td>
              <td role="gridcell"><a href="mailto:joe@blahblahblah.blahblah">joe@blahblahblah.blahblah</a></td>
           </tr>
-          <tr role="row" aria-level="2" aria-posinset="2" aria-setsize="3" aria-expanded="true">
+          <tr role="row" aria-level="2" aria-posinset="2" aria-setsize="3" aria-expanded="false">
              <td role="gridcell">re: Treegrids are awesome
              <td role="gridcell">They are great for showing a lot of data, like a grid
              <td role="gridcell"><a href="mailto:billy@dangerous.fish">billy@dangerous.fish</a></td>
           </tr>
-          <tr role="row" aria-level="3" aria-posinset="1" aria-setsize="1">
+          <tr role="row" aria-level="3" aria-posinset="1" aria-setsize="1" class="hidden">
              <td role="gridcell">re: Treegrids are awesome</td>
              <td role="gridcell">Cool, we've been needing an example and documentation</td>
              <td role="gridcell"><a href="mailto:doris@rufflazydogs.sleep">doris@rufflazydogs.sleep</a></td>
           </tr>
-          <tr role="row" aria-level="2" aria-posinset="3" aria-setsize="3" aria-expanded="true">
+          <tr role="row" aria-level="2" aria-posinset="3" aria-setsize="3" aria-expanded="false">
              <td role="gridcell">re: Treegrids are awesome</td>
              <td role="gridcell">I hear the Fancytree library is going to align with this example!</td>
              <td role="gridcell"><a href="mailto:someone@please-do-it.company">someone@please-do-it.company</a></td>
           </tr>
-          <tr role="row" aria-level="3" aria-posinset="1" aria-setsize="1" aria-expanded="false">
+          <tr role="row" aria-level="3" aria-posinset="1" aria-setsize="1" aria-expanded="false" class="hidden">
              <td role="gridcell">re: Treegrids are awesome</td>
              <td role="gridcell">Sometimes they are more like trees, otherse are more like grids</td>
              <td role="gridcell"><a href="mailto:mari@beingpractical.com">mari@beingpractical.com</a></td>
           </tr>
-          <tr role="row" aria-level="4" aria-posinset="1" aria-setsize="2" aria-hidden="true">
+          <tr role="row" aria-level="4" aria-posinset="1" aria-setsize="2" class="hidden">
              <td role="gridcell">re: Treegrids are awesome</td>
              <td role="gridcell">Cool, when it's a tree, let's keep left/right to collapse/expand</td>
              <td role="gridcell"><a href="mailto:issie@imadeadcatsadly.wascute">issie@imadeadcatsadly.wascute</a></td>
           </tr>
-          <tr role="row" aria-level="4" aria-posinset="2" aria-setsize="2" aria-hidden="true">
+          <tr role="row" aria-level="4" aria-posinset="2" aria-setsize="2" class="hidden">
              <td role="gridcell">re: Treegrids are awesome
              <td role="gridcell">I see, sometimes right arrow moves by column</td>
              <td role="gridcell"><a href="mailto:kitten@kittenseason.future">kitten@kittenseason.future</a></td>
@@ -453,30 +453,6 @@ document.addEventListener('DOMContentLoaded', function () {
               <li>The visual indication of the open state is synchronized by a CSS attribute selector.</li>
               <li>When the treegrid is configured to support focus on rows <code>aria-expanded</code> is on the <code>tr</code> elements, but when the treegrid is configured to support focus on cells only, <code>aria-expanded</code> is on the first <code>td</code> element contained in each row.</li>
             </td>
-        </tr>
-        <tr>
-          <td>
-          </td>
-          <th scope="row"><code>aria-hidden=<q>false</q></code></th>
-          <td><code>tr</code></td>
-          <td>
-            <ul>
-              <li><code>aria-hidden</code> is used to control the information available to assistive technologies.</li>
-              <li>When the <code>row</code> is visible (e.g. a top level message or a message whose parent message is expanded), <code>aria-hidden=<q>false</q></code> makes the message row information available to assistive technologies.</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <td>
-          </td>
-          <th scope="row"><code>aria-hidden=<q>true</q></code></th>
-          <td><code>tr</code></td>
-          <td>
-            <ul>
-              <li><code>aria-hidden</code> is used to control the information available to assistive technologies.</li>
-              <li>When a message <code>row</code> is <strong>not</strong> visible (e.g. is parent message is collapsed), <code>aria-hidden=<q>true</q></code> <strong>hides</strong> the message row  information from assistive technologies.</li>
-            </ul>
-          </td>
         </tr>
         <tr>
           <td>
