Add IDL example for button for ARIA 1.2

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -426,6 +426,7 @@
       <section class="notoc">
         <h4>Examples</h4>
         <p><a href="examples/button/button.html">Button Examples</a>: Examples of clickable HTML <code>div</code> and <code>span</code> elements made into accessible command and toggle buttons.</p>
+        <p><a href="examples/button/button_idl.html">Button Examples (IDL)</a>: Examples of clickable HTML <code>div</code> and <code>span</code> elements made into accessible command and toggle buttons. This example uses the <a class="specref" href="#idl-interface">IDL Interface</a>.</p>
       </section>
 
       <section class="notoc">
